--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   firebase_storage: ^12.3.6
+  path_provider: ^2.1.2
   provider: ^6.1.2
+  file_picker: ^6.1.1
   http: ^1.2.1
+  google_fonts: ^6.2.0
   shared_preferences: ^2.2.2
   flutter_markdown: ^0.7.4+3
   flutter_local_notifications: ^18.0.1
