--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: roadmapped
-description: "A learning roadmap tracking application"
+description: "A comprehensive learning roadmap tracking application that helps users create, share, and follow structured learning paths"
 publish_to: 'none'
 version: 1.0.0+1
 
